--- a/style.css
+++ b/style.css
@@ -174,30 +174,20 @@ ul li:hover .submenu{
 
 }
 .pic1{
-
-    background-image: url('../project/img/pic1.jpg');
-    
+    background-image: url('./img/pic1.jpg');
 }
 .pic2{
-
-    background-image: url('../project/img/pic2.jpg');
+    background-image: url('./img/pic2.jpg');
 }
-
 .pic3{
-
-    background-image: url('../project/img/pic3.jpg');
+    background-image: url('./img/pic3.jpg');
 }
-
 .pic4{
-
-    background-image: url('../project/img/pic4.jpg');
+    background-image: url('./img/pic4.jpg');
 }
-
 .pic5{
-
-    background-image: url('../project/img/pic5.jpg');
+    background-image: url('./img/pic5.jpg');
 }
-
 
 
 
