update signup btn color hover

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ header ul li a.btn{
 header ul li a.btn:hover{
 
     color: #212e5e;
-    background-color:#3c61c6;
+    background-color:#fff;
     
     
 }
